# glue-aladin

./: LICENSE  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml
glue_aladin/: __init__.py  aladin_lite.py  catalog_layer_widget.py  catalog_layer_widget.ui  data_viewer.py  layer_artist.py  layer_state.py  options_widget.py  options_widget.ui  tools.py  utils.py  viewer_state.py
glue_aladin/common/: catalog_layer_state.py
glue_aladin/qt/: __init__.py  data_viewer.py  layer_artist.py  options_widget.py
glue_aladin/qt/tests/: test_viewer.py
glue_aladin/tests/: test_viewer.py  utils.py
