[metadata]
name = glue-wwt
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-aladin
description = Glue Aladin Lite plugin
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
setup_requires = setuptools_scm
install_requires =
    numpy
    glue-core>=1.0
    echo
    qtpy
    astropy

[options.package_data]
glue_aladin = *.ui, *.html, *.js, *.png

[options.entry_points]
glue.plugins =
    aladin = glue_aladin:setup

[options.extras_require]
test =
    pytest
    pytest-cov
    mock
qt =
    PyQt5
    PyQtWebEngine
