[metadata]
name = glue-aladin
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-aladin
description = Glue Aladin Lite plugin
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
setup_requires = setuptools_scm
install_requires =
    numpy
    glue-core>=1.13.1
    echo
    glue_qt
    qtpy
    astropy

[options.package_data]
glue_aladin = *.ui, *.html, *.js, *.png

[options.entry_points]
glue.plugins =
    aladin = glue_aladin:setup

[options.extras_require]
test =
    pytest
    pytest-cov
    mock
pyqt5 =
    PyQt5
    PyQtWebEngine
pyqt6 =
    PyQt6
    PyQt6-WebEngine
pyside2 =
    PySide2
pyside6 =
    PySide6
